--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ data/
 
 # Local chat/debug logs (can contain tokens)
 docs/chat.txt
+
+# Temporary workspaces and downloads
+tmp_workspace/
+downloads_*/
